Fix single photo spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -341,7 +341,7 @@ blockquote p,
 
   .navbar-content {
     display: block;
-    padding-bottom: 2.4rem;
+    padding-bottom: 2.2rem;
   }
 
   .navbar-content > .navbar-internal-links {
